--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Kareem's Portfolio - A Vibrant Data Engineer Portfolio" />
+  <meta name="description" content="Siddhartha's Portfolio - A Vibrant Data Engineer Portfolio" />
   <title>Kareem | Data Engineer Portfolio</title>
   <link rel="icon" href="favicon.ico" />
   <script src="https://cdn.tailwindcss.com"></script>
